--- a/tuprofeparticularformulario.css
+++ b/tuprofeparticularformulario.css
@@ -196,6 +196,10 @@ line-height: 20px;
 .form-register a:hover{
   color: #000;
   text-decoration: underline;
+
+}
+a{
+  
 }
 
 .form-register .botons{
